# helix

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml
app/: cli.py  main.py
app/cliAssets/: main.py
app/database/: primary.py
app/database/core/: config.py  connect.py
app/routes/: default.py
app/routes/additional/: openapi_generate_router.py
app/routes/requestbased/: catch_all.py
app/routes/ui/: dashboard.py  default.py  health.py
app/services/: ai_manager.py  analyzer.py  cache.py  context.py  logger.py
app/services/additional/: openapi_generate.py
app/services/ai/: __init__.py  config.py  manager.py
app/services/ai/core/: config.py
app/services/ai/providers/: __init__.py  base.py  deepseek.py  demo.py  groq.py  ollama.py
assets/AI/: MOCKPILOT_SYSTEM.md
docs/: SCHEMAS.md
templates/default_pages/: dashboard.html  index.html
tests/: __init__.py  conftest.py  test_app.py  test_utils.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_catch_all.py  test_dashboard.py  test_health_endpoints.py  test_openapi_generate.py
tests/unit/: __init__.py  test_cache.py  test_config.py  test_context.py
tests/unit/services/ai/: test_ai_manager.py  test_demo_provider.py  (+1 more)
(+4 files in other folders)
