[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [". git", "venv", ". venv", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix"
version = "0.1.0"
description = "AI-Powered API Mocking Platform"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "uvicorn",
    "rich",
    "questionary",
    "fastapi"
]

[project.scripts]
helix = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["assets*", "static*", "templates*", "tests*"]